[SW-125] refactor(rank): 현재 시즌 순위 조회 쿼리 생성 (#35)